--- a/exercicioAcoplamentoInterface/.project
+++ b/exercicioAcoplamentoInterface/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exercicioAcoplamentoInterface</name>
+	<name>exercicioAcoplamento</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1746577938316</id>
+			<id>1746577938312</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
